--- a/mural.html
+++ b/mural.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Bem-vindo, <span id="nomeUsuario"></span>!</h2>
+    <h2>Bem-vindo, <span id="nomeUsuario"></span>!</h2> <br>
+    <h5>"Criei esse mural para um projeto da faculdade, mas a ideia não é só acadêmica. 
+      Queria também criar um espaço onde meus amigos pudessem se divertir e interagir de uma forma nova e diferente.
+      A proposta é algo como uma rede social exclusiva, mirei no X e acertei no Orkurt"</h5> <br>
 
     <button onclick="irParaPerfil()">Ver Perfil</button>
 
