--- a/mural.html
+++ b/mural.html
@@ -13,6 +13,9 @@
 
     <!-- Exibindo a foto de perfil -->
     <img id="fotoPerfil" class="foto-perfil" src="" alt="Foto de Perfil"><br>
+    <button onclick="game()">Game</button>
+
+    <button onclick="sair()">Sair</button>
 
     <br> <button onclick="irParaPerfil()">Ver Perfil</button> <br>
 
@@ -21,8 +24,6 @@
 
     <h3>Mural:</h3>
     <div id="mural"></div><br>
-
-    <button onclick="game()">Game</button>
 
     <button onclick="sair()">Sair</button>
   </div>
