--- a/jogovelha.html
+++ b/jogovelha.html
@@ -94,7 +94,7 @@
         <div id="mode-selection">
             <button class="btn" onclick="startGame('computer')">Jogar contra a Máquina</button>
             <button class="btn secondary" onclick="startGame('player')">Jogar com um Oponente</button>
-            <a href="index.html" class="btn secondary" style="margin-top: 20px;">Voltar ao Menu Principal</a>
+            <a href="mural.html" class="btn secondary" style="margin-top: 20px;">Voltar ao Menu Principal</a>
         </div>
 
         <div id="game-content" style="display: none;">
