--- a/pggame.html
+++ b/pggame.html
@@ -16,6 +16,7 @@
         <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
             <a href="jogovelha.html" class="btn">Jogo da Velha</a>
             <a href="pokemongame.html" class="btn secondary">Batalha Pokémon</a>
+            <a href="andar.html" class="btn">Andar</a>
         </div>
     </div>
 
