--- a/andar.html
+++ b/andar.html
@@ -9,7 +9,7 @@
 <body>
     <div id="game-container">
         <div id="forest-background"></div>
-        <img id="character" src="imagens/boneco_parado.png" alt="Boneco">
+        <img id="character" src="boneco_parado.png" alt="Boneco">
     </div>
 
     <button id="voltar-mural" onclick="irParaMural()">Voltar ao Mural</button>
