--- a/andar.html
+++ b/andar.html
@@ -14,6 +14,11 @@
 
     <button id="voltar-mural" onclick="irParaMural()">Voltar ao Mural</button>
 
+    <div id="mobile-controls">
+        <button id="left-button">⬅️</button>
+        <button id="right-button">➡️</button>
+    </div>
+
     <script src="andar.js"></script>
     <script>
         function irParaMural() {
