--- a/mural.html
+++ b/mural.html
@@ -11,11 +11,7 @@
   <div class="login-container">
     <h2>Bem-vindo, <span id="nomeUsuario"></span>!</h2>
 
-    <!-- Exibindo a foto de perfil -->
     <img id="fotoPerfil" class="foto-perfil" src="" alt="Foto de Perfil"><br>
-    <button onclick="game()">Game</button>
-
-    <button onclick="sair()">Sair</button>
 
     <br> <button onclick="irParaPerfil()">Ver Perfil</button> <br>
 
@@ -25,10 +21,10 @@
     <h3>Mural:</h3>
     <div id="mural"></div><br>
 
+    <button onclick="game()">Game</button>
     <button onclick="sair()">Sair</button>
   </div>
 
-  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
 
@@ -46,16 +42,12 @@
 
     firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
-  </script>
 
-  <script>
     const usuario = localStorage.getItem("usuarioLogado");
     if (!usuario) {
       window.location.href = "index.html";
     } else {
       document.getElementById("nomeUsuario").textContent = usuario;
-      
-      // Recuperar a foto de perfil do Firebase
       const usuarioRef = database.ref("usuarios").child(usuario);
       usuarioRef.on("value", snapshot => {
         const usuarioData = snapshot.val();
@@ -72,7 +64,9 @@
       const novaMensagem = {
         autor: usuario,
         texto: texto,
-        data: new Date().toLocaleString()
+        data: new Date().toLocaleString(),
+        curtidas: 0,
+        comentarios: []
       };
 
       database.ref("mensagens").push(novaMensagem);
@@ -81,7 +75,7 @@
 
     function carregarMensagens() {
       const mural = document.getElementById("mural");
-      mural.innerHTML = "";  // Limpa o mural antes de adicionar as novas mensagens
+      mural.innerHTML = "";
 
       database.ref("mensagens").on("value", snapshot => {
         const mensagens = snapshot.val();
@@ -93,13 +87,12 @@
             const card = document.createElement("div");
             card.className = "card";
 
-            // Buscar foto de perfil do autor da mensagem
             const usuarioRef = database.ref("usuarios").child(msg.autor);
             usuarioRef.once("value", snapshot => {
               const usuarioData = snapshot.val();
               const fotoPerfil = usuarioData ? usuarioData.fotoPerfil : "";
               
-              const fotoHtml = fotoPerfil ? `<img src="${fotoPerfil}" class="foto-perfil">` : "<img src='default-avatar.png' class='foto-perfil'>";  // Imagem padrão caso não tenha foto
+              const fotoHtml = fotoPerfil ? `<img src="${fotoPerfil}" class="foto-perfil">` : "<img src='default-avatar.png' class='foto-perfil'>";
 
               let html = `
                 <div class="perfil">
@@ -107,6 +100,15 @@
                   <strong>${msg.autor}</strong> <small>${msg.data}</small>
                 </div>
                 <p>${msg.texto}</p>
+                <button onclick="curtirMensagem('${key}')">Curtir</button>
+                <span id="curtidas-${key}">${msg.curtidas || 0} curtidas</span>
+                <div>
+                  <textarea id="comentario-${key}" placeholder="Escreva um comentário..."></textarea>
+                  <button onclick="comentarMensagem('${key}')">Comentar</button>
+                </div>
+                <div id="comentarios-${key}">
+                  ${msg.comentarios ? msg.comentarios.map(com => `<p>${com}</p>`).join('') : ''}
+                </div>
               `;
 
               if (msg.autor === usuario) {
@@ -118,6 +120,31 @@
             });
           });
         }
+      });
+    }
+
+    function curtirMensagem(key) {
+      const mensagemRef = database.ref("mensagens").child(key);
+      mensagemRef.once("value", snapshot => {
+        const msg = snapshot.val();
+        const novasCurtidas = msg.curtidas ? msg.curtidas + 1 : 1;
+        mensagemRef.update({ curtidas: novasCurtidas });
+        document.getElementById(`curtidas-${key}`).textContent = `${novasCurtidas} curtidas`;
+      });
+    }
+
+    function comentarMensagem(key) {
+      const comentario = document.getElementById(`comentario-${key}`).value.trim();
+      if (comentario === "") return;
+
+      const mensagemRef = database.ref("mensagens").child(key);
+      mensagemRef.once("value", snapshot => {
+        const msg = snapshot.val();
+        const novosComentarios = msg.comentarios ? [...msg.comentarios, comentario] : [comentario];
+        mensagemRef.update({ comentarios: novosComentarios });
+
+        document.getElementById(`comentarios-${key}`).innerHTML = novosComentarios.map(com => `<p>${com}</p>`).join('');
+        document.getElementById(`comentario-${key}`).value = "";
       });
     }
 
