--- a/perfil.html
+++ b/perfil.html
@@ -13,13 +13,11 @@
 
     <button onclick="irParaMural()">Ver Mural</button>
 
-    <!-- Exibição da Foto de Perfil -->
     <div class="perfil-imagem">
       <img id="fotoPerfil" src="" alt="Foto de Perfil" class="foto-perfil">
       <input type="file" id="fotoPerfilInput" accept="image/*" onchange="atualizarFotoPerfil()">
     </div>
 
-    <!-- Exibição e Edição do Nome -->
     <div class="perfil-nome">
       <strong>Nome de Usuário:</strong>
       <input type="text" id="nomePerfil" value="" placeholder="Digite seu nome" onchange="atualizarNome()">
@@ -32,7 +30,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
 <script>
-  // Inicialização do Firebase
   const firebaseConfig = {
     apiKey: "AIzaSyBOrsDTkjnh8e4L-NcD8rfgqhGNMrHQXts",
     authDomain: "rubix-mural.firebaseapp.com",
@@ -44,11 +41,9 @@
     measurementId: "G-P24SH5EBGK"
   };
 
-  // Inicializa o Firebase
   firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
-  // Carregar os dados do perfil armazenados
   document.addEventListener('DOMContentLoaded', function () {
     const nome = localStorage.getItem("usuarioLogado");
     const foto = localStorage.getItem("fotoPerfil");
@@ -62,18 +57,15 @@
     }
   });
 
-  // Redirecionar para o mural
   function irParaMural() {
-    window.location.href = "mural.html"; // Redireciona para a página do mural
+    window.location.href = "mural.html";
   }
 
-  // Atualizar nome do usuário no localStorage
   function atualizarNome() {
     const nome = document.getElementById("nomePerfil").value;
     localStorage.setItem("usuarioLogado", nome);
   }
 
-  // Atualizar a foto de perfil no localStorage
   function atualizarFotoPerfil() {
     const fotoInput = document.getElementById("fotoPerfilInput").files[0];
     if (fotoInput) {
@@ -88,27 +80,25 @@
   }
 
   function salvarPerfil() {
-  const nome = document.getElementById("nomePerfil").value;
-  const foto = document.getElementById("fotoPerfil").src;
+    const nome = document.getElementById("nomePerfil").value;
+    const foto = document.getElementById("fotoPerfil").src;
   
-  if (!nome) {
-    document.getElementById("mensagemErro").textContent = "Por favor, insira seu nome!";
-    return;
-  }
+    if (!nome) {
+      document.getElementById("mensagemErro").textContent = "Por favor, insira seu nome!";
+      return;
+    }
 
-  // Salvar no localStorage (para uso imediato no cliente)
-  localStorage.setItem("usuarioLogado", nome);
-  localStorage.setItem("fotoPerfil", foto);
-  
-  // Salvar no Firebase, associando o nome ao usuário
-  const usuarioRef = database.ref("usuarios").child(nome);
-  usuarioRef.set({
-    nome: nome,
-    fotoPerfil: foto
-  });
-  
-  document.getElementById("mensagemErro").textContent = "Perfil salvo com sucesso!";
-}
+    localStorage.setItem("usuarioLogado", nome);
+    localStorage.setItem("fotoPerfil", foto);
+    
+    const usuarioRef = database.ref("usuarios").child(nome);
+    usuarioRef.set({
+      nome: nome,
+      fotoPerfil: foto
+    });
+    
+    document.getElementById("mensagemErro").textContent = "Perfil salvo com sucesso!";
+  }
 </script>
 </body>
 </html>
